[gd_scene load_steps=9 format=3 uid="uid://bbj8pyn25yf66"]

[ext_resource type="Script" path="res://scenes/bounce_game.gd" id="1_wke0h"]
[ext_resource type="PackedScene" uid="uid://bkrxcrnc3ujmf" path="res://scenes/score.tscn" id="2_048or"]
[ext_resource type="PackedScene" uid="uid://cxda7vg43ivh6" path="res://scenes/synchronizer.tscn" id="2_spbxy"]
[ext_resource type="PackedScene" uid="uid://qpkuy8v3dype" path="res://scenes/beat_sliding_measure.tscn" id="3_mqb58"]
[ext_resource type="PackedScene" uid="uid://bl7qa441o7ood" path="res://scenes/beat_bounce.tscn" id="4_2n757"]
[ext_resource type="PackedScene" uid="uid://cbgj0mgaffebi" path="res://scenes/beat_circle.tscn" id="5_unpbx"]
[ext_resource type="PackedScene" uid="uid://bfvr3gip13q74" path="res://scenes/sword_attack_character.tscn" id="7_7slbx"]
[ext_resource type="PackedScene" uid="uid://c2mn3n1ys1iwk" path="res://scenes/rhythm_character.tscn" id="8_xiram"]

[node name="BounceGame" type="Node2D"]
script = ExtResource("1_wke0h")

[node name="Score" parent="." instance=ExtResource("2_048or")]
position = Vector2(618, 431)

[node name="StartText" type="Label" parent="."]
offset_left = 456.0
offset_top = 305.0
offset_right = 614.0
offset_bottom = 328.0
text = "Press Space to Start!"

[node name="QuitText" type="Label" parent="."]
offset_left = -1.0
offset_right = 120.0
offset_bottom = 23.0
text = "Press Q to Quit!"

[node name="Synchronizer" parent="." instance=ExtResource("2_spbxy")]

[node name="BeatSlidingMeasure" parent="." instance=ExtResource("3_mqb58")]
position = Vector2(100, 166)

[node name="BeatBounce" parent="." instance=ExtResource("4_2n757")]
position = Vector2(270, 488)

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(6, -3)
polygon = PackedVector2Array(174, 520, 354, 520, 354, 533, 174, 533)

[node name="BeatCircle" parent="." instance=ExtResource("5_unpbx")]
position = Vector2(716, 431)
scale = Vector2(0.36073, 0.358632)

[node name="TestCharacter" parent="." instance=ExtResource("7_7slbx")]
position = Vector2(492, 509)
scale = Vector2(4.12, 4.02442)

[node name="RhythmCharacter" parent="." instance=ExtResource("8_xiram")]

[connection signal="primary_action" from="." to="." method="_on_primary_action"]
[connection signal="quit_pressed" from="." to="." method="_on_quit_pressed"]
[connection signal="start_pressed" from="." to="." method="_on_start_pressed"]
